--- a/Code02_Decoding_with_neurosynth_data.ipynb
+++ b/Code02_Decoding_with_neurosynth_data.ipynb
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays._slicers.OrthoSlicer at 0x7be77f0d0d50>"
+       "<nilearn.plotting.displays._slicers.OrthoSlicer at 0x71af26fb43d0>"
       ]
      },
      "execution_count": 4,
@@ -147,7 +147,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_146046/1909349830.py:20: UserWarning: Data array used to create a new image contains 64-bit ints. This is likely due to creating the array with numpy and passing `int` as the `dtype`. Many tools such as FSL and SPM cannot deal with int64 in Nifti images, so for compatibility the data has been converted to int32.\n",
+      "/tmp/ipykernel_148856/1909349830.py:20: UserWarning: Data array used to create a new image contains 64-bit ints. This is likely due to creating the array with numpy and passing `int` as the `dtype`. Many tools such as FSL and SPM cannot deal with int64 in Nifti images, so for compatibility the data has been converted to int32.\n",
       "  ICN_SM_thres = masking.unmask(z_thresh, mask_rs)\n"
      ]
     },
@@ -210,7 +210,7 @@
     "ids = neurosynth_dset_copy.get_studies_by_mask(ICN_SM_thres_mni152)\n",
     "\n",
     "# Train the decoder\n",
-    "decoder = discrete.NeurosynthDecoder(correction=None)\n",
+    "decoder = discrete.NeurosynthDecoder(correction=\"fdr_bh\")\n",
     "decoder.fit(neurosynth_dset_copy)"
    ]
   },
@@ -890,7 +890,7 @@
     "ids = neurosynth_dset.get_studies_by_mask(ICN_SM_thres_mni152)\n",
     "\n",
     "# Decode\n",
-    "decoder = discrete.BrainMapDecoder(correction=None)\n",
+    "decoder = discrete.BrainMapDecoder(correction=\"fdr_bh\")\n",
     "decoder.fit(neurosynth_dset_copy)\n",
     "decoded_df = decoder.transform(ids=ids)\n",
     "decoded_df.sort_values(by=\"probReverse\", ascending=False)"
