--- a/Code03_Decoding_with_neuroquery_data.ipynb
+++ b/Code03_Decoding_with_neuroquery_data.ipynb
@@ -103,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays._slicers.OrthoSlicer at 0x7e35ad148790>"
+       "<nilearn.plotting.displays._slicers.OrthoSlicer at 0x7e8a96c29110>"
       ]
      },
      "execution_count": 4,
@@ -146,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_145790/1104305248.py:20: UserWarning: Data array used to create a new image contains 64-bit ints. This is likely due to creating the array with numpy and passing `int` as the `dtype`. Many tools such as FSL and SPM cannot deal with int64 in Nifti images, so for compatibility the data has been converted to int32.\n",
+      "/tmp/ipykernel_148874/1104305248.py:20: UserWarning: Data array used to create a new image contains 64-bit ints. This is likely due to creating the array with numpy and passing `int` as the `dtype`. Many tools such as FSL and SPM cannot deal with int64 in Nifti images, so for compatibility the data has been converted to int32.\n",
       "  ICN_SM_thres = masking.unmask(z_thresh, mask_rs)\n"
      ]
     },
@@ -209,7 +209,7 @@
     "ids = neuroquery_dset_copy.get_studies_by_mask(ICN_SM_thres_mni152)\n",
     "\n",
     "# Train the decoder\n",
-    "decoder = discrete.NeurosynthDecoder(correction=None)\n",
+    "decoder = discrete.NeurosynthDecoder(correction=\"fdr_bh\")\n",
     "decoder.fit(neuroquery_dset_copy)"
    ]
   },
@@ -867,7 +867,7 @@
     "ids = neuroquery_dset_copy.get_studies_by_mask(ICN_SM_thres_mni152)\n",
     "\n",
     "# Decode\n",
-    "decoder = discrete.BrainMapDecoder(correction=None)\n",
+    "decoder = discrete.BrainMapDecoder(correction=\"fdr_bh\")\n",
     "decoder.fit(neuroquery_dset_copy)\n",
     "decoded_df = decoder.transform(ids=ids)\n",
     "decoded_df.sort_values(by=\"probReverse\", ascending=False)"
